Add reference of js and css to html.

--- a/src/main/java/com/cenxui/tea/app/website/website.html
+++ b/src/main/java/com/cenxui/tea/app/website/website.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>台灣阿里山姑娘茶</title>
+    <link rel="stylesheet" type="text/css" href="website.css" />
+    <script src="website.js"></script>
 </head>
 <body>
     <div class = "topdiv">
@@ -11,7 +13,7 @@
     </div>
 
     <div class = "tabdiv">
-        <table width = "800" height = "50" align = "center" valign = "center">
+        <table cellpadding="10" width = "80%" align = "center" >
             <tr>
                 <td>關於我們</td>
                 <td>全部商品</td>
