refactor item util make it can auto generate field to item.

--- a/application/src/main/webapp/admin/dashboard.html
+++ b/application/src/main/webapp/admin/dashboard.html
@@ -129,7 +129,8 @@
             url : orderEndpoint,
             success : function(response) {
                 let data = JSON.parse(response);
-                appendText(data);
+                let orders = data.orders;
+                appendText(orders);
                 console.info(data)
 
             },
