add repository exception add order attribute

--- a/application/src/main/webapp/admin/dashboard.html
+++ b/application/src/main/webapp/admin/dashboard.html
@@ -13,6 +13,8 @@
 
     <!-- Custom styles for this template -->
     <link href="dashboard.css" rel="stylesheet">
+
+    <script src="language/tw.js"></script>
 </head>
 
 <body onload="onLoad()">
