cash report complete &&fixed order scroll bug

--- a/application/src/main/webapp/admin/cashreport.html
+++ b/application/src/main/webapp/admin/cashreport.html
@@ -28,20 +28,14 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" onclick="onAllOrder()" href="#">所有訂單</a>
+                    <a class="nav-link" onclick="onAllCash()" href="#">所有現金</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" onclick="onActiveOrder()" href="#">有效訂單</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" onclick="onPaidOrder()" href="#">已付款定單</a>
+                    <a class="nav-link" onclick="onDailyRangeCash()" href="#">區間現金</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" onclick="onProcessingOrder()"  href="#">處理中訂單</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" onclick="onShippedOrder()" href="#">已出貨訂單</a>
+                    <a class="nav-link" onclick="onDailyCash()"  href="#">每日現金</a>
                 </li>
 
             </ul>
@@ -96,7 +90,7 @@
 
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="auth.js"></script>
-<script src="dashboard.js"></script>
+<script src="cashreport.js"></script>
 
 <script>
 
