fixed ship order scroll bug

--- a/application/src/main/webapp/admin/dashboard.html
+++ b/application/src/main/webapp/admin/dashboard.html
@@ -17,7 +17,7 @@
     <script src="language/tw.js"></script>
 </head>
 
-<body onload="onLoad()">
+<body onload="onLoad()" onscroll="onScroll()">
 <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="#">Dashboard</a>
