--- a/admin/src/main/webapp/cashreport.html
+++ b/admin/src/main/webapp/cashreport.html
@@ -17,7 +17,7 @@
     <script src="language/tw.js"></script>
 </head>
 
-<body onload="onLoad()">
+<body>
 <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="#">Dashboard</a>
@@ -27,17 +27,6 @@
 
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" onclick="onAllCash()" href="#">所有現金</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" onclick="onDailyRangeCash()" href="#">區間現金</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" onclick="onDailyCash()"  href="#">每日現金</a>
-                </li>
-
             </ul>
             <form class="form-inline mt-2 mt-md-0">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -53,7 +42,16 @@
             <h1>Dashboard</h1>
 
             <h2 id="sectionTitle">Section title</h2>
+
+            <button onclick="onAllCash()">所有現金</button>
+            <input id="daily" type="date"/>
+            <button onclick="onDailyCash()">每日現金</button>
+            <input id="from" type="date"/>
+            <input id="to" type="date"/>
+            <button onclick="onRangeCash()">區間現金</button>
+
             <div class="table-responsive">
+                <span id="revenue"></span>
                 <table class="table table-striped">
                     <thead>
                     <tr>
@@ -66,7 +64,7 @@
                         <th id="v7"></th>
                     </tr>
                     </thead>
-                    <tbody id="orderForm">
+                    <tbody id="receiptForm">
                     </tbody>
                 </table>
             </div>
