--- a/admin/src/main/webapp/product-upload.html
+++ b/admin/src/main/webapp/product-upload.html
@@ -16,6 +16,7 @@
     <script src="build/jQuery/jQuery.js" type="text/javascript"></script>
     <script src="build/squire.js" type="text/javascript"></script>
     <script src="build/Squire-UI.js" type="text/javascript"></script>
+    <script src="dist/js/bootstrap.bundle.js" type="text/javascript"></script>
     <script src="dist/js/fileinput.min.js" type="text/javascript"></script>
 
 </head>
@@ -47,15 +48,10 @@
     </div>
 
     <form enctype="multipart/form-data">
-
-        <div class="file-loading">
-            <input id="small" class="file" type="file" data-min-file-count="1">
-        </div>
-        <br>
-        <div class="file-loading">
-            <input id="images" class="file" type="file" multiple data-min-file-count="1">
-        </div>
-        <br>
+        <label for="small">smallImage</label>
+        <input id="small" type="file" data-min-file-count="1">
+        <label for="images">images</label>
+        <input id="images" type="file" multiple data-min-file-count="1">
         <button type="button" class="btn btn-primary">Submit</button>
         <button type="reset" class="btn btn-default">Reset</button>
     </form>
@@ -76,6 +72,13 @@
 </style>
 
 <script>
+
+    $(document).on('ready', function() {
+        $(":file").fileinput({
+            showUpload: false,
+            mainClass: "file-loading"
+        });
+    });
 
     $(document).ready(function () {
         detail = new SquireUI({replace: 'textarea#detail', height: 200});
@@ -116,6 +119,7 @@
 
 
     $(':file').on('change', function() {
+
         let len = this.files.length;
 
         for (let i =0; i< len ; i++) {
