--- a/admin/src/main/webapp/dashboard.html
+++ b/admin/src/main/webapp/dashboard.html
@@ -28,30 +28,17 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="search.html">查詢訂單</a>
+                    <a class="nav-link" href="./dashboard.html">訂單列表</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" onclick="onAllOrder()" href="#">所有訂單</a>
+                    <a class="nav-link" href="./product.html">商品列表</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" onclick="onActiveOrder()" href="#">有效訂單</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" onclick="onPaidOrder()" href="#">已付款定單</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" onclick="onProcessingOrder()"  href="#">處理中訂單</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" onclick="onShippedOrder()" href="#">已出貨訂單</a>
+                    <a class="nav-link" href="./cashreport.html">現金報告</a>
                 </li>
 
             </ul>
-            <form class="form-inline mt-2 mt-md-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+
         </div>
     </nav>
 </header>
@@ -60,8 +47,31 @@
     <div class="row">
         <main role="main">
             <h1>Dashboard</h1>
+            <button onclick="onAllOrder()">所有訂單</button>
+            <button onclick="onActiveOrder()">有效訂單</button>
+            <button onclick="onPaidOrder()">已付款定單</button>
+            <button onclick="onProcessingOrder()">處理中訂單</button>
+            <button onclick="onShippedOrder()">已出貨訂單</button>
 
-            <h2 id="sectionTitle">Section title</h2>
+            <div></div>
+            <input id="mail" placeholder="mail">
+            <input id="orderDateTime" placeholder="orderDateTime">
+            <button onclick="searchAllOrder()">查詢</button>
+            <div></div>
+            <input id="paidDate" placeholder="paidDate">
+            <input id="paidTime" placeholder="paidTime">
+            <button onclick="searchPaidOrder()">查詢</button>
+            <div></div>
+            <input id="processingDate" placeholder="processingDate">
+            <input id="owner" placeholder="owner">
+            <button onclick="searchProcessingOrder()">查詢</button>
+            <div></div>
+            <input id="shippedDate" placeholder="shippedDate">
+            <input id="shippedTime" placeholder="shippeTime">
+            <button onclick="searchShippedOrder()">查詢</button>
+            <div></div>
+
+            <h2 id="sectionTitle"></h2>
             <div class="table-responsive">
                 <table class="table table-striped">
                     <thead>
@@ -94,9 +104,7 @@
 
 <!--<script src="./dist/js/bootstrap.min.js"></script>-->
 
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+<script src="dist/js/bootstrap.min.js"></script>
 
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="auth.js"></script>
