--- a/admin/src/main/webapp/cashreport.html
+++ b/admin/src/main/webapp/cashreport.html
@@ -24,14 +24,19 @@
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="./dashboard.html">訂單列表</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./product.html">商品列表</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./cashreport.html">現金報告</a>
+                </li>
+
             </ul>
-            <form class="form-inline mt-2 mt-md-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
     </nav>
 </header>
@@ -41,11 +46,15 @@
         <main role="main">
             <h1>Dashboard</h1>
 
-            <h2 id="sectionTitle">Section title</h2>
+            <h2 id="sectionTitle">現金報告</h2>
 
             <button onclick="onAllCash()">所有現金</button>
+            <div>
+            </div>
             <input id="daily" type="date"/>
             <button onclick="onDailyCash()">每日現金</button>
+            <div>
+            </div>
             <input id="from" type="date"/>
             <input id="to" type="date"/>
             <button onclick="onRangeCash()">區間現金</button>
@@ -78,10 +87,7 @@
 
 <!--<script src="./dist/js/bootstrap.min.js"></script>-->
 
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-
+<script src="dist/js/bootstrap.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="auth.js"></script>
 <script src="cashreport.js"></script>
